# Grid2Vec

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  example.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  onCreateCommand.sh
.github/workflows/: ci.yaml
examples/nminus1_analysis/: README.md  analyze_nminus1_calculation.ipynb  analyze_nminus1_calculations.ipynb  collect_nminus1_calculations.py  collect_powerflow_calculations.py  process_nminus1_calculations.py  process_powerflow_calculations.py
grid2vec/: action_dump.py  action_search.py  action_set.py  actions.py  batched_nminus1.py  batched_pfc.py  combinator_env.py  env.py  grid.py  grid2op_compat.py  nminus1_definition.py  result_spec.py  solver_interface.py  spaces.py  util.py
src/: config.py  enums.py  logger.py
tests/: conftest.py  test_action_dump.py  test_action_search.py  test_action_set.py  test_actions.py  test_batched_nminus1.py  test_batched_pfc.py  test_combinator_env.py  test_env.py  test_grid.py  test_grid2op_compat.py  test_logger.py  test_nminus1_definition.py  test_result_spec.py  test_solver_interface.py  test_spaces.py
