[tool.poetry]
name = "ai-coe-mlops-githubcodespaces"
version = "0.1.0"
description = "GitHub Codespaces template"
authors = ["AI Center of Excellence"]

[tool.poetry.dependencies]
python = "3.11.*"
rich = "^13.3.4"
pydantic = "^1.10.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"